Fixed broken CSS for decimal ordered lists nested in alpha ordered list, thanks to Alex Efros-4 (see http://www.nabble.com/ordered-lists-bug-in-8.2.5-to16643593.html).

--- a/stylesheets/xhtml11-quirks.css
+++ b/stylesheets/xhtml11-quirks.css
@@ -30,3 +30,11 @@ div.exampleblock-content {
 
 /* IE6 sets dynamically generated links as visited. */
 div#toc a:visited { color: blue; }
+
+/* Because IE6 child selector is broken. */
+div.olist2 ol {
+  list-style-type: lower-alpha;
+}
+div.olist2 div.olist ol {
+  list-style-type: decimal;
+}
